finishing base family routes and started member routes
