# internal/service/response.go
@@ -1,5 +1,7 @@
 package service
 
+import "github.com/ricardomgoncalves/truphone_ta_go/pkg/family"
+
 // CreateFamilyResponse
 //
 // Response by CreateFamily Service.
@@ -30,6 +32,95 @@ type CreateFamilyResponse struct {
 	Result string `json:"result,omitempty"`
 }
 
+// ListFamiliesResponse
+//
+// Response by ListFamilies Service.
+//
+// swagger:model
+type ListFamiliesResponse struct {
+	// the id for the request
+	//
+	// required: true
+	// example: 8957bf28-aea0-47de-abe0-d4c5ea593ec6
+	Id string `json:"id"`
+
+	// the response code for the request
+	//
+	// required: true
+	// example: 200
+	Code int `json:"code"`
+
+	// the message for the request
+	//
+	// required: true
+	// example: success
+	Message string `json:"message"`
+
+	// the families for the request
+	//
+	// required: true
+	Result []family.Family `json:"result,omitempty"`
+}
+
+// GetFamilyResponse
+//
+// Response by GetFamily Service.
+//
+// swagger:model
+type GetFamilyResponse struct {
+	// the id for the request
+	//
+	// required: true
+	// example: 8957bf28-aea0-47de-abe0-d4c5ea593ec6
+	Id string `json:"id"`
+
+	// the response code for the request
+	//
+	// required: true
+	// example: 200
+	Code int `json:"code"`
+
+	// the message for the request
+	//
+	// required: true
+	// example: success
+	Message string `json:"message"`
+
+	// the family for the request
+	//
+	// required: true
+	Result family.Family `json:"result,omitempty"`
+}
+
+// UpdateFamilyResponse
+//
+// Response by UpdateFamily Service.
+//
+// swagger:model
+type UpdateFamilyResponse struct {
+	// the id for the request
+	//
+	// required: true
+	// example: 8957bf28-aea0-47de-abe0-d4c5ea593ec6
+	Id string `json:"id"`
+
+	// the response code for the request
+	//
+	// required: true
+	// example: 200
+	Code int `json:"code"`
+
+	// the message for the request
+	//
+	// required: true
+	// example: success
+	Message string `json:"message"`
+
+	// the family for the request
+	//
+	// required: true
+	Result family.Family `json:"result,omitempty"`
+}
 
 // DeleteFamilyResponse
 //
@@ -54,4 +145,34 @@ type DeleteFamilyResponse struct {
 	// required: true
 	// example: success
 	Message string `json:"message"`
+}
+
+// CreateMemberResponse
+//
+// Response by CreateMember Service.
+//
+// swagger:model
+type CreateMemberResponse struct {
+	// the id for the request
+	//
+	// required: true
+	// example: 8957bf28-aea0-47de-abe0-d4c5ea593ec6
+	Id string `json:"id"`
+
+	// the response code for the request
+	//
+	// required: true
+	// example: 200
+	Code int `json:"code"`
+
+	// the message for the request
+	//
+	// required: true
+	// example: success
+	Message string `json:"message"`
+
+	// the message for the request
+	//
+	// required: true
+	Result string `json:"result,omitempty"`
 }
